--- a/content/posts/我的博客.md
+++ b/content/posts/我的博客.md
@@ -1,10 +1,14 @@
 ---
 title: "我的博客"
 date: 2021-02-27T19:08:13+08:00
-draft: true
+draft: false
 ---
 
-
-# 欢迎来到我的博客
-
-这是通过Hugo创建的博客，希望未来写出好文章来分享，无限进步！加油！冲冲冲！
+---
+欢迎来到我的博客
+---
+===
+*d*
+## 这是通过Hugo创建的博客，希望未来写出好文章来分享，无限进步！加油！冲冲冲！
+### 那么开始实验吧！
+ 
